--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "editor.detectIndentation": false,
 		"editor.tabSize": 2,
-		"editor.insertSpaces": false
+		"editor.insertSpaces": false,
+		"cSpell.words": [
+			"implemementations"
+		]
 }
