--- a/package.json
+++ b/package.json
@@ -2,49 +2,54 @@
   "name": "rentalx",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Roberto Cabral <croberto.cabral@yahoo.com.br>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register --poll --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
-    "test": "jest",
+    "test":  "set NODE_ENV=test&&jest --runInBand --detectOpenHandles",
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
+  },
+  "dependencies": {
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/swagger-ui-express": "^4.1.3",
+    "bcryptjs": "^2.4.3",
+    "csv-parse": "^5.0.3",
+    "dayjs": "^1.10.7",
+    "supertest": "^6.2.1",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "init": "^0.1.2",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.2.0",
+    "tsc": "^2.0.3",
+    "tsyringe": "^4.6.0",
+    "typeorm": "^0.2.41",
+    "typescript": "^4.5.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.4.0",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
-    "eslint": "^8.1.0",
+    "@types/jest": "^27.0.3",
+    "@types/multer": "^1.4.7",
+    "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import-helpers": "^1.2.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.4.7",
+    "jest": "^27.4.5",
     "prettier": "^2.4.1",
     "ts-jest": "^27.1.2",
     "ts-node-dev": "^1.1.8",
-    "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.4.4"
-  },
-  "dependencies": {
-    "@types/jsonwebtoken": "^8.5.6",
-    "@types/multer": "^1.4.7",
-    "@types/uuid": "^8.3.1",
-    "bcryptjs": "^2.4.3",
-    "csv-parse": "^4.16.3",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "jsonwebtoken": "^8.5.1",
-    "latest": "^0.2.0",
-    "multer": "^1.4.3",
-    "node": "^17.4.0",
-    "pg": "^8.7.1",
-    "reflect-metadata": "^0.1.13",
-    "swagger-ui-express": "^4.1.6",
-    "tsyringe": "^4.6.0",
-    "typeorm": "^0.2.41",
-    "uuid": "^8.3.2"
+    "tsconfig-paths": "^3.12.0"
   }
 }
