--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
-    "test":  "set NODE_ENV=test&&jest --runInBand --detectOpenHandles",
+    "test": "set NODE_ENV=test&&jest ",
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "@types/csv-parse": "^1.2.2",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/swagger-ui-express": "^4.1.3",
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.0.3",
     "dayjs": "^1.10.7",
-    "supertest": "^6.2.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "init": "^0.1.2",
@@ -23,6 +23,7 @@
     "multer": "^1.4.3",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.2.1",
     "swagger-ui-express": "^4.2.0",
     "tsc": "^2.0.3",
     "tsyringe": "^4.6.0",
